# LokiViewer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cancel.rs  health.rs  mod.rs  query.rs  sources.rs
src-tauri/src/config/: store.rs
src-tauri/src/loki/: client.rs  error.rs  types.rs
src/components/labels/: LabelItem.tsx  LabelTree.tsx  LabelValueChip.tsx
src/components/layout/: AppShell.tsx  MainPanel.tsx  Sidebar.tsx  StatusBar.tsx
src/components/logs/: LogDetail.tsx  LogList.tsx  LogRow.tsx
src/components/query/: AutoRefreshToggle.tsx  QueryInput.tsx  TimeRangePicker.tsx
src/components/shared/: ContextMenu.tsx  Dialog.tsx  EmptyState.tsx  ErrorState.tsx  Spinner.tsx
src/components/sources/: SourceCard.tsx  SourceForm.tsx  SourceList.tsx
src/hooks/: useAutoRefresh.ts
src/lib/: constants.ts  tauri-commands.ts
src/stores/: labelsStore.ts  logsStore.ts  queryStore.ts  sourcesStore.ts  uiStore.ts
src/types/: loki.ts  query.ts
